// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render KanbanBoard correctly with no items 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "static",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "static",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "static",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(observable): [Function],
        }
      }
    >
      <KanbanBoard>
        <section
          className="kanban"
        >
          <div
            className="container"
          >
            <div
              className="kanban__board--todo"
              key="0"
            >
              <KanbanBoardHeader
                status="todo"
              >
                <div
                  className="kanban__thead"
                >
                  <h3>
                    todo
                  </h3>
                </div>
              </KanbanBoardHeader>
              <KanbanBoardBody
                status="todo"
              >
                <div
                  className="kanban__tbody"
                >
                  <div
                    className="kanban_item"
                    id="kanbanNewItem"
                  >
                    <Link
                      className="kanban__item"
                      to="/add-proyect"
                    >
                      <LinkAnchor
                        className="kanban__item"
                        href="/add-proyect"
                        navigate={[Function]}
                      >
                        <a
                          className="kanban__item"
                          href="/add-proyect"
                          onClick={[Function]}
                        >
                          <p
                            className="kanban__add-plus"
                          >
                            +
                          </p>
                          <p
                            className="kanban__add-text"
                          >
                            Create new proyect here
                          </p>
                        </a>
                      </LinkAnchor>
                    </Link>
                  </div>
                </div>
              </KanbanBoardBody>
            </div>
            <div
              className="kanban__board--doing"
              key="1"
            >
              <KanbanBoardHeader
                status="doing"
              >
                <div
                  className="kanban__thead"
                >
                  <h3>
                    doing
                  </h3>
                </div>
              </KanbanBoardHeader>
              <KanbanBoardBody
                status="doing"
              >
                <div
                  className="kanban__tbody"
                >
                  <div
                    className="kanban_item"
                    id="kanbanNewItem"
                  >
                    <Link
                      className="kanban__item"
                      to="/add-proyect"
                    >
                      <LinkAnchor
                        className="kanban__item"
                        href="/add-proyect"
                        navigate={[Function]}
                      >
                        <a
                          className="kanban__item"
                          href="/add-proyect"
                          onClick={[Function]}
                        >
                          <p
                            className="kanban__add-plus"
                          >
                            +
                          </p>
                          <p
                            className="kanban__add-text"
                          >
                            Create new proyect here
                          </p>
                        </a>
                      </LinkAnchor>
                    </Link>
                  </div>
                </div>
              </KanbanBoardBody>
            </div>
            <div
              className="kanban__board--done"
              key="2"
            >
              <KanbanBoardHeader
                status="done"
              >
                <div
                  className="kanban__thead"
                >
                  <h3>
                    done
                  </h3>
                </div>
              </KanbanBoardHeader>
              <KanbanBoardBody
                status="done"
              >
                <div
                  className="kanban__tbody"
                >
                  <div
                    className="kanban_item"
                    id="kanbanNewItem"
                  >
                    <Link
                      className="kanban__item"
                      to="/add-proyect"
                    >
                      <LinkAnchor
                        className="kanban__item"
                        href="/add-proyect"
                        navigate={[Function]}
                      >
                        <a
                          className="kanban__item"
                          href="/add-proyect"
                          onClick={[Function]}
                        >
                          <p
                            className="kanban__add-plus"
                          >
                            +
                          </p>
                          <p
                            className="kanban__add-text"
                          >
                            Create new proyect here
                          </p>
                        </a>
                      </LinkAnchor>
                    </Link>
                  </div>
                </div>
              </KanbanBoardBody>
            </div>
          </div>
        </section>
      </KanbanBoard>
    </Provider>
  </Router>
</MemoryRouter>
`;

exports[`Should render KanbanBoard correctly with proyects 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "static",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "static",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "static",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(observable): [Function],
        }
      }
    >
      <KanbanBoard>
        <section
          className="kanban"
        >
          <div
            className="container"
          >
            <div
              className="kanban__board--todo"
              key="0"
            >
              <KanbanBoardHeader
                status="todo"
              >
                <div
                  className="kanban__thead"
                >
                  <h3>
                    todo
                  </h3>
                </div>
              </KanbanBoardHeader>
              <KanbanBoardBody
                status="todo"
              >
                <div
                  className="kanban__tbody"
                >
                  <div
                    className="kanban_item"
                    id="kanbanNewItem"
                  >
                    <Link
                      className="kanban__item"
                      to="/add-proyect"
                    >
                      <LinkAnchor
                        className="kanban__item"
                        href="/add-proyect"
                        navigate={[Function]}
                      >
                        <a
                          className="kanban__item"
                          href="/add-proyect"
                          onClick={[Function]}
                        >
                          <p
                            className="kanban__add-plus"
                          >
                            +
                          </p>
                          <p
                            className="kanban__add-text"
                          >
                            Create new proyect here
                          </p>
                        </a>
                      </LinkAnchor>
                    </Link>
                  </div>
                  <KanbanItem
                    color="green"
                    description="This is my proyect fixure 1"
                    endDate={1616108400000}
                    id="p1"
                    invoice="100"
                    key="p1"
                    name="Proyect 1"
                    startDate={1615762800000}
                    status="todo"
                  >
                    <div
                      className="kanban_item"
                    >
                      <Link
                        className="kanban__item"
                        data-id="p1"
                        onClick={[Function]}
                        to="/proyect/p1"
                      >
                        <LinkAnchor
                          className="kanban__item"
                          data-id="p1"
                          href="/proyect/p1"
                          navigate={[Function]}
                          onClick={[Function]}
                        >
                          <a
                            className="kanban__item"
                            data-id="p1"
                            href="/proyect/p1"
                            onClick={[Function]}
                          >
                            <p
                              className="kanban__item__title"
                            >
                              Proyect 1
                            </p>
                            <p
                              className="kanban__item__description"
                            >
                              This is my proyect fixure 1
                            </p>
                            <p
                              className="kanban__item__invoice"
                            >
                              100
                            </p>
                          </a>
                        </LinkAnchor>
                      </Link>
                    </div>
                  </KanbanItem>
                </div>
              </KanbanBoardBody>
            </div>
            <div
              className="kanban__board--doing"
              key="1"
            >
              <KanbanBoardHeader
                status="doing"
              >
                <div
                  className="kanban__thead"
                >
                  <h3>
                    doing
                  </h3>
                </div>
              </KanbanBoardHeader>
              <KanbanBoardBody
                status="doing"
              >
                <div
                  className="kanban__tbody"
                >
                  <div
                    className="kanban_item"
                    id="kanbanNewItem"
                  >
                    <Link
                      className="kanban__item"
                      to="/add-proyect"
                    >
                      <LinkAnchor
                        className="kanban__item"
                        href="/add-proyect"
                        navigate={[Function]}
                      >
                        <a
                          className="kanban__item"
                          href="/add-proyect"
                          onClick={[Function]}
                        >
                          <p
                            className="kanban__add-plus"
                          >
                            +
                          </p>
                          <p
                            className="kanban__add-text"
                          >
                            Create new proyect here
                          </p>
                        </a>
                      </LinkAnchor>
                    </Link>
                  </div>
                  <KanbanItem
                    color="red"
                    description="This is my proyect fixure 2"
                    endDate={1616540400000}
                    id="p2"
                    invoice="200"
                    key="p2"
                    name="Proyect 2"
                    startDate={1616194800000}
                    status="doing"
                  >
                    <div
                      className="kanban_item"
                    >
                      <Link
                        className="kanban__item"
                        data-id="p2"
                        onClick={[Function]}
                        to="/proyect/p2"
                      >
                        <LinkAnchor
                          className="kanban__item"
                          data-id="p2"
                          href="/proyect/p2"
                          navigate={[Function]}
                          onClick={[Function]}
                        >
                          <a
                            className="kanban__item"
                            data-id="p2"
                            href="/proyect/p2"
                            onClick={[Function]}
                          >
                            <p
                              className="kanban__item__title"
                            >
                              Proyect 2
                            </p>
                            <p
                              className="kanban__item__description"
                            >
                              This is my proyect fixure 2
                            </p>
                            <p
                              className="kanban__item__invoice"
                            >
                              200
                            </p>
                          </a>
                        </LinkAnchor>
                      </Link>
                    </div>
                  </KanbanItem>
                </div>
              </KanbanBoardBody>
            </div>
            <div
              className="kanban__board--done"
              key="2"
            >
              <KanbanBoardHeader
                status="done"
              >
                <div
                  className="kanban__thead"
                >
                  <h3>
                    done
                  </h3>
                </div>
              </KanbanBoardHeader>
              <KanbanBoardBody
                status="done"
              >
                <div
                  className="kanban__tbody"
                >
                  <div
                    className="kanban_item"
                    id="kanbanNewItem"
                  >
                    <Link
                      className="kanban__item"
                      to="/add-proyect"
                    >
                      <LinkAnchor
                        className="kanban__item"
                        href="/add-proyect"
                        navigate={[Function]}
                      >
                        <a
                          className="kanban__item"
                          href="/add-proyect"
                          onClick={[Function]}
                        >
                          <p
                            className="kanban__add-plus"
                          >
                            +
                          </p>
                          <p
                            className="kanban__add-text"
                          >
                            Create new proyect here
                          </p>
                        </a>
                      </LinkAnchor>
                    </Link>
                  </div>
                  <KanbanItem
                    color="blue"
                    description="This is my proyect fixure 3"
                    endDate={1616968800000}
                    id="p3"
                    invoice="300"
                    key="p3"
                    name="Proyect 3"
                    startDate={1616626800000}
                    status="done"
                  >
                    <div
                      className="kanban_item"
                    >
                      <Link
                        className="kanban__item"
                        data-id="p3"
                        onClick={[Function]}
                        to="/proyect/p3"
                      >
                        <LinkAnchor
                          className="kanban__item"
                          data-id="p3"
                          href="/proyect/p3"
                          navigate={[Function]}
                          onClick={[Function]}
                        >
                          <a
                            className="kanban__item"
                            data-id="p3"
                            href="/proyect/p3"
                            onClick={[Function]}
                          >
                            <p
                              className="kanban__item__title"
                            >
                              Proyect 3
                            </p>
                            <p
                              className="kanban__item__description"
                            >
                              This is my proyect fixure 3
                            </p>
                            <p
                              className="kanban__item__invoice"
                            >
                              300
                            </p>
                          </a>
                        </LinkAnchor>
                      </Link>
                    </div>
                  </KanbanItem>
                </div>
              </KanbanBoardBody>
            </div>
          </div>
        </section>
      </KanbanBoard>
    </Provider>
  </Router>
</MemoryRouter>
`;
